--- a/src/pacoteprincipal/FormFolha.form
+++ b/src/pacoteprincipal/FormFolha.form
@@ -127,7 +127,7 @@
 
       <Layout class="org.netbeans.modules.form.compat2.layouts.support.JScrollPaneSupportLayout"/>
       <SubComponents>
-        <Component class="javax.swing.JEditorPane" name="jEditorPane1">
+        <Component class="javax.swing.JEditorPane" name="jtNome">
         </Component>
       </SubComponents>
     </Container>
@@ -138,7 +138,7 @@
 
       <Layout class="org.netbeans.modules.form.compat2.layouts.support.JScrollPaneSupportLayout"/>
       <SubComponents>
-        <Component class="javax.swing.JTextPane" name="jTextPane1">
+        <Component class="javax.swing.JTextPane" name="jtSalario">
         </Component>
       </SubComponents>
     </Container>
@@ -177,13 +177,16 @@
         <Component class="javax.swing.JTable" name="jTable1">
           <Properties>
             <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
-              <Table columnCount="4" rowCount="4">
-                <Column editable="true" title="Title 1" type="java.lang.Object"/>
-                <Column editable="true" title="Title 2" type="java.lang.Object"/>
-                <Column editable="true" title="Title 3" type="java.lang.Object"/>
-                <Column editable="true" title="Title 4" type="java.lang.Object"/>
+              <Table columnCount="6" rowCount="4">
+                <Column editable="false" title="Nome" type="java.lang.Object"/>
+                <Column editable="false" title="Salario" type="java.lang.Object"/>
+                <Column editable="false" title="INSS" type="java.lang.Object"/>
+                <Column editable="false" title="IRRF" type="java.lang.Object"/>
+                <Column editable="false" title="Salario familia" type="java.lang.Object"/>
+                <Column editable="false" title="Salario Liquido" type="java.lang.Object"/>
               </Table>
             </Property>
+            <Property name="name" type="java.lang.String" value="" noResource="true"/>
           </Properties>
         </Component>
       </SubComponents>
